chore: Clean up project and remove non-core features for final submission
- Remove Canvas/Knowledge Board components and related services
- Remove YouTube integration and URL extraction functionality
- Remove browser extension and scraping server
- Delete unused services: YouTubeService, URLProcessor, WebScrapingAPI
- Update App.jsx and Sidebar.jsx to remove feature switching
- Add comprehensive project documentation for final year submission
- Add README_FINAL_YEAR_PROJECT.md with installation and usage guide
- Add PROJECT_DOCUMENTATION.md with technical architecture details
- Add PRESENTATION_GUIDE.md with 21-slide outline and demo script
- Add QUICK_START.md for rapid project setup
- Add UI_IMPROVEMENTS_SUMMARY.md documenting UI enhancements
- Add CLEANUP_PLAN.md and FINAL_PROJECT_SUMMARY.md for project tracking
- Update package.json with proper project metadata
- Update index.html with professional meta tags
- Focus project on core AI chat and document processing features
- Streamline codebase for production-ready submission

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="DevSavvy - Your Professional AI Assistant powered by Local LLMs via Google Colab." />
-    <title>DevSavvy | Professional AI Workspace</title>
+    <meta name="description" content="AI-Powered Document Assistant - Intelligent document processing and chat system using local LLMs" />
+    <meta name="keywords" content="AI, Document Processing, LLM, Ollama, Chat Assistant, Final Year Project" />
+    <meta name="author" content="Your Name" />
+    <title>AI Document Assistant | Final Year Project</title>
   </head>
   <body>
     <div id="root"></div>
